# DeepEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DeepEngine.sln  DeepEngine.vcxproj  DeepEngine.vcxproj.filters  Doxyfile  README.md  cmake_install.cmake  color.cpp  compile_commands.json  cpp.hint  pixel.cpp  variables.cmake
Core/: CMakeLists.txt
Core/Source/: common.cpp  core.cpp  debug.cpp  deep_engine.hpp  file.cpp  key.cpp  logger.cpp  mat.cpp  mutex.cpp  renderer.cpp  resources.cpp  safe_integer.cpp  stream.cpp  string.cpp  string_utils.cpp  sys_win.cpp  vec.cpp  window.cpp
Core/Source/Include/DE/: color.hpp  common.hpp  core.hpp  debug.hpp  def.hpp  drawable.hpp  error.hpp  file.hpp  key.hpp  logger.hpp  mat.hpp  mutex.hpp  renderer.hpp  resources.hpp  safe_integer.hpp  stream.hpp  string.hpp  string_utils.hpp  types.hpp  vec.hpp  vec_imp.hpp  window.hpp
Core/Source/Include/DE/audio/: audio.hpp
Core/Source/Include/DE/c-wrapper/: core.h  logger.h  string_utils.h  types.h
Core/Source/Include/DE/core/: camera.hpp  collection.hpp  color.hpp  common.hpp  core.hpp  hash_table.hpp  list.hpp  memory.hpp  ref_counted.hpp  resources.hpp  safe_integer.hpp  settings.hpp  stack.hpp  string.hpp  string_utils.hpp  types.hpp  window.hpp
Core/Source/Include/DE/doc/: customdoxygen.css  mainpage.doc
Core/Source/Include/DE/ecs/: component.hpp  ecs.hpp  entity.hpp  scene.hpp  system.hpp
Core/Source/Include/DE/file/: file.hpp  file_object.hpp
Core/Source/Include/DE/graphics/: graphic.hpp  material.hpp  renderer.hpp  shape.hpp  vertex.hpp
Core/Source/Include/DE/gui/: deimgui.hpp
Core/Source/Include/DE/hardware/: cpu.hpp
Core/Source/Include/DE/image/: bmp.hpp  image.hpp  png.hpp
Core/Source/Include/DE/imgui/: deimgui.hpp
Core/Source/Include/DE/io/: file_stream.hpp  memory_stream.hpp  stream.hpp  (+2 more)
Core/Source/Include/glad/: glad.h
Core/Source/audio/: audio.cpp  audio.hpp
Core/Source/core/: camera.cpp  camera.hpp  color.cpp  color.hpp  common.cpp  common.hpp  core.cpp  core.hpp  def.hpp  hash_table.hpp  list.hpp  memory.cpp  memory.hpp  ref_counted.hpp  ref_counter.cpp  resources.cpp  resources.hpp  safe_integer.cpp  safe_integer.hpp  settings.cpp  settings.hpp  stack.hpp  string.cpp  string.hpp  string_utils.cpp  types.hpp  window.cpp  window.hpp
Core/Source/core/config/: settings.cpp  settings.hpp
Core/Source/core/nodes/: scene_graph.hpp
Core/Source/core/resources/: bmp_loader.cpp  bmp_loader.hpp  fobj.cpp  fobj.hpp  image.cpp  image.hpp  resource.hpp  resource_loader.cpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp  text.cpp  text.hpp  text_loader.cpp  text_loader.hpp
Core/Source/core/string/: string.cpp  string.hpp  string_utils.cpp  string_utils.hpp
Core/Source/core/templates/: collection.hpp  hash_table.hpp  list.hpp  pair.hpp  stack.hpp
Core/Source/drivers/: gl3.hpp
Core/Source/drivers/opengl/: core.cpp  core.hpp  def.hpp  error.cpp  error.hpp  framebuffer.cpp  framebuffer.hpp  framerenderbuffer.cpp  framerenderbuffer.hpp  renderbuffer.cpp  renderbuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
Core/Source/ecs/: component.cpp  component.hpp  ecs.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  system.cpp  system.hpp
Core/Source/file/: file.cpp  file.hpp  file_object.cpp  file_object.hpp
Core/Source/graphics/: graphic.cpp  graphic.hpp  material.cpp  material.hpp  renderer.cpp  renderer.hpp  shape.hpp
Core/Source/gui/: deimgui.cpp  deimgui.hpp
Core/Source/hardware/: cpu.cpp  cpu.hpp
Core/Source/image/: bmp.cpp  bmp.hpp  image.hpp  png.cpp  png.hpp
Core/Source/imgui/: deimgui.cpp
Core/Source/io/: file_stream.cpp  file_stream.hpp  memory_stream.cpp  memory_stream.hpp  stream.cpp  stream.hpp  stream_writer.cpp  stream_writer.hpp  string_writer.cpp  string_writer.hpp  text_writer.cpp  text_writer.hpp
Core/Source/maths/: mat.cpp  mat.hpp  mat_impl.hpp  vec.cpp  vec.hpp  vec_impl.hpp
Core/Source/memory/: hash_table.cpp  memory.cpp  ref_counter.cpp  settings.cpp
Core/Source/modules/zip/: zip.cpp  zip.hpp  zip_reader.cpp  zip_reader.hpp  zip_types.hpp  zip_writer.cpp  zip_writer.hpp
Core/Source/os/: COM.cpp  COM.hpp  events.cpp  events.hpp  file_dialog.cpp  file_dialog.hpp  key.cpp  key.hpp  mutex.cpp  mutex.hpp  sys_win.cpp  sys_win.hpp  win32.cpp  win32.hpp  window.cpp  window.hpp
Core/Source/rendering/: camera.cpp  opengl_utils.cpp
Engine/: CMakeLists.txt
Engine/DeepEngine/: basic_shapes.hpp  camera.cpp  camera.hpp  empty.cpp  empty.hpp  engine.cpp  engine.hpp  project.cpp  project.hpp
Engine/DeepEngine/GUI/: gui.hpp  imgui_chat.cpp  imgui_chat.hpp  imgui_debug_panel.cpp  imgui_debug_panel.hpp  imgui_drawable.cpp  imgui_drawable.hpp  imgui_helper.cpp  imgui_helper.hpp  imgui_manager.cpp  imgui_manager.hpp
Engine/DeepEngine/Scripting/: dot_net_host.cpp  dot_net_host.hpp
Engine/DeepEngine/Shaders/: cube.hlsl  plane_ps.hlsl  plane_vs.hlsl  test_cube.hlsl  test_triangle.hlsl  textured_cube.hlsl
Modules/Model/: CMakeLists.txt
Modules/Model/Assimp/: loader.cpp  loader.hpp
Modules/Renderer/: CMakeLists.txt
Modules/Renderer/D3D/: CMakeLists.txt  device_context.cpp  device_context.hpp  error.cpp  error.hpp  graphics.cpp  graphics.hpp  resource.cpp  resource.hpp  resource_factory.cpp  resource_factory.hpp  sampler.cpp  sampler.hpp  texture.cpp  texture.hpp
Modules/Renderer/D3D/buffer/: constant_buffer.cpp  constant_buffer.hpp  index_buffer.cpp  index_buffer.hpp  per_frame_buffer.hpp  per_object_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
Modules/Renderer/D3D/drawable/: cube.cpp  cube.hpp  drawable.cpp  drawable.hpp  drawable_factory.cpp  drawable_factory.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  rectangle.cpp  rectangle.hpp  textured_cube.cpp  textured_cube.hpp  triangle.cpp  triangle.hpp
Modules/Renderer/D3D/shader/: pixel_shader.cpp  pixel_shader.hpp  shader.hpp  shader_factory.cpp  shader_factory.hpp  vertex_shader.cpp  vertex_shader.hpp
src/: key.cpp  (+23 more)
(+1200 files in other folders)
